# Process this file with autoconf to produce a configure script.
AC_INIT(src/utmp-jeber.h)

PACKAGE=utmp-jeber
VERSION=1.0.6
BUGREPORT=siefca@gnu.org

AC_CONFIG_SRCDIR([config.h.in])
AM_INIT_AUTOMAKE($PACKAGE,$VERSION,$BUGREPORT)
AM_MAINTAINER_MODE

AH_TEMPLATE(CONSIDER_INIT,Define this if you want init to be treated as possible parent of session processes)

AM_CONFIG_HEADER([config.h])
AM_ACLOCAL_INCLUDE(macros)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK
AC_PROG_RANLIB
AC_ISC_POSIX
AC_PROG_LN_S
AC_CANONICAL_HOST

dnl Checks for libraries.
AC_CHECK_LIB(util, logout)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h \
		  malloc.h \
		  string.h \
		  sys/types.h \
		  sys/param.h \
		  termios.h \
		  unistd.h \
		  utmp.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([getpgid getopt snprintf strchr memcpy memset])
AM_CONDITIONAL(HAVE_SNPRINTF,test "x$ac_cv_func_snprintf" = "xyes")

dnl Checks for arguments line conditions
AC_MSG_CHECKING(whether to treat init process as possible parent of sessions)
AC_ARG_ENABLE(
    init_as_parent,
    [  --enable-init-as-parent enable treating init as possible parent of sessions [default=no]], [
		if test "$enableval" = "no"; then
			AC_MSG_RESULT([no])
		else
			AC_MSG_RESULT([yes])
			AC_DEFINE_UNQUOTED(CONSIDER_INIT)
		fi
	], AC_MSG_RESULT([no]) )

dnl Export variables
AC_SUBST(EXTRA_SOURCES)

AC_CONFIG_FILES([Makefile \
		 macros/Makefile \
                 src/Makefile])
AC_OUTPUT
