# Process this file with autoconf to produce a configure script.
AC_INIT(utmp-jeber,1.0.11,siefca@gnu.org)

PACKAGE=$PACKAGE_NAME
VERSION=$PACKAGE_VERSION
RELEASE=1
BUGREPORT=$PACKAGE_BUGREPORT
SUMMARY="Print and optionally remove broken UTMP entries"

AC_SUBST(RELEASE)
AC_SUBST(SUMMARY)

#AC_CONFIG_SRCDIR(confdefs.h)
AM_INIT_AUTOMAKE($PACKAGE,$VERSION,$BUGREPORT)
AM_MAINTAINER_MODE

AH_TEMPLATE(CONSIDER_INIT,Define this if you want init to be treated as possible parent of session processes)
AH_TEMPLATE(NEED_ROOT,Define this if you want a whole program to need superuser in order to work)
AH_TEMPLATE(UTMP_NAME,Define this to specify path to the UTMP file)

AM_CONFIG_HEADER(config.h)
#AM_ACLOCAL_INCLUDE(macros)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK
AC_PROG_RANLIB
AC_ISC_POSIX
AC_PROG_LN_S
AC_CANONICAL_HOST

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h \
		  malloc.h \
		  string.h \
		  sys/types.h \
		  sys/param.h \
		  termios.h \
		  unistd.h \
		  paths.h \
		  stddef.h \
		  utmp.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([utmpname strrchr getpgid getopt snprintf strchr memcpy memset stat malloc])
AM_CONDITIONAL(HAVE_SNPRINTF,test "x$ac_cv_func_snprintf" = "xyes")

dnl Checks for arg line conditions
AC_MSG_CHECKING(whether to treat init process as possible parent of sessions)
AC_ARG_ENABLE(
    init_as_parent,
    [  --enable-init-as-parent enable treating init as possible parent of sessions [default=no]], [
		if test "$enableval" = "no"; then
			AC_MSG_RESULT([no])
		else
			AC_MSG_RESULT([yes])
			AC_DEFINE_UNQUOTED(CONSIDER_INIT)
		fi
	], AC_MSG_RESULT([no]) )

AC_MSG_CHECKING(whether to need superuser in order to work)
AC_ARG_ENABLE(
    need_root,
    [  --enable-need-root enable program to work only if run by superuser [default=no]], [
		if test "$enableval" = "no"; then
			AC_MSG_RESULT([no])
		else
			AC_MSG_RESULT([yes])
			AC_DEFINE_UNQUOTED(NEED_ROOT)
		fi
	], AC_MSG_RESULT([no]) )

AC_ARG_WITH(utmp_file,
[  --with-utmp-file        path to UTMP file
                           [in most common cases /var/run/utmpx, but may use /var/run/utmp on some systems]],
with_utmp_file=${withval})
if test x$with_utmp_file != x ; then
	jeber_utmp_file="\"$with_utmp_file\""
else
	jeber_utmp_file="\"/var/run/utmpx\""
fi
AC_DEFINE_UNQUOTED(UTMP_NAME, $jeber_utmp_file)

dnl Export variables
AC_SUBST(EXTRA_SOURCES)

AC_OUTPUT([
	    utmp-jeber.spec
	    html-template
	    utmp-jeber.cron
	    Makefile
	    macros/Makefile
    	    src/Makefile
	 ])
